# string-sections

./: Cargo.toml
src/: lib.rs  line_span.rs  prelude.rs  section_finder.rs  section_iter.rs  section_span.rs
tests/: test_sections.rs
